--- a/violation.html
+++ b/violation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Police</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -25,7 +25,7 @@
           <strong>Հայաստանի Հանրապետության<br />ոստիկանության «Ճանապարհային ոստիկանություն» ծառայություն</strong>
         </p>
         <p class="decisionOnCollection">
-          <strong style="font-size: 10pt">ՈՐՈՇՈՒՄ № 2113230545</strong>
+          <strong class="decisionNumber">ՈՐՈՇՈՒՄ № 2113230545</strong>
           <br />
           <strong>Վարչական տույժ նշանակելու մասին</strong>
         </p>
@@ -42,99 +42,82 @@
         <p class="iFoundOut">
           <strong class="fontArianAMUBold">ՊԱՐԶԵՑԻ</strong>
         </p>
-        <table border="1" cellpadding="3" id="main_data">
-          <tbody>
-            <tr>
-              <td rowspan="6">Տրանսպորտային միջոցի</td>
-              <td>մակնիշը</td>
-              <td>LEXUS</td>
-            </tr>
-            <tr>
-              <td>համարանիշը</td>
-              <td>99GG993</td>
-            </tr>
-            <tr>
-              <td>գույնը</td>
-              <td>ԱՐԾԱԹԱԳՈՒՅՆ ՄԵՏԱԼԻԿ</td>
-            </tr>
-            <tr>
-              <td>գրանցման (հաշվառման) հասցեն</td>
-              <td>ԳԵՂԱՐՔՈՒՆԻՔ, Պ. ՍԵՎԱԿԻ Փ. 1 ՆՐԲ. Տ 8</td>
-            </tr>
-            <tr>
-              <td>
-                սեփականատերը, լիզինգի պայմանագրով վարձակալը կամ շահագործող
-                պետական մարմինը
-              </td>
-              <td>ԱՇՈՏ ՄՈՒՇԵՂԻ ՄԽԻԹԱՐՅԱՆ</td>
-            </tr>
-            <tr>
-              <td>արագությունն ըստ արագաչափի</td>
-              <td>72կմ/ժ</td>
-            </tr>
-            <tr>
-              <td colspan="2">Թույլատրելի առավելագույն արագությունը</td>
-              <td>60կմ/ժ</td>
-            </tr>
-            <tr>
-              <td rowspan="2">Խախտման</td>
-              <td>օրը, ամիսը, տարին, ժամը, րոպեն</td>
-              <td>30 հլս. 2021թ. Ժամը` 10:43</td>
-            </tr>
-            <tr>
-              <td>վայրը</td>
-              <td>ՀՀ, Մ-3 86 կմ, գ. Ալագյազ</td>
-            </tr>
-            <tr>
-              <td>Խախտված իրավանորմը</td>
-              <td colspan="2">
-                ՀՀ կառավարության 2007 թվականի հունիսի 28-ի №955-Ն որոշման
-                Հավելված №1-ի 68-րդ կետ
-              </td>
-            </tr>
-            <tr>
-              <td>Հաստատված հանգամանքները</td>
-              <td colspan="2">
-                Հանելով արագաչափ սարքի հնարավոր սխալանքի 10կմ/ժ չափը՝
-                բնակավայրում գերազանցել է երթևեկության սահմանված արագությունը
-                2կմ/ժ-ով
-              </td>
-            </tr>
-            <tr>
-              <td>Վարչական պատասխանատվություն նախատեսող նորմատիվ ակտը</td>
-              <td colspan="2">
-                Վարչական իրավախախտումների վերաբերյալ ՀՀ օրենսգրքի 124.4-րդ
-                հոդվածի 1-ին մաս
-              </td>
-            </tr>
-          </tbody>
+        <table class="table">
+          <tr>
+            <td rowspan="6">Տրանսպորտային միջոցի</td>
+            <td>մակնիշը</td>
+            <td>LEXUS</td>
+          </tr>
+          <tr>
+            <td>համարանիշը</td>
+            <td>99GG993</td>
+          </tr>
+          <tr>
+            <td>գույնը</td>
+            <td>ԱՐԾԱԹԱԳՈՒՅՆ<br /> ՄԵՏԱԼԻԿ</td>
+          </tr>
+          <tr>
+            <td>գրանցման (հաշվառման) հասցեն</td>
+            <td>ԳԵՂԱՐՔՈՒՆԻՔ, Պ.<br /> ՍԵՎԱԿԻ Փ. 1 ՆՐԲ. Տ 8</td>
+          </tr>
+          <tr>
+            <td>սեփականատերը, լիզինգի պայմանագրով վարձակալը կամ շահագործող պետական մարմինը</td>
+            <td>ԱՇՈՏ ՄՈՒՇԵՂԻ ՄԽԻԹԱՐՅԱՆ</td>
+          </tr>
+          <tr>
+            <td>արագությունն ըստ արագաչափի</td>
+            <td>72կմ/ժ</td>
+          </tr>
+          <tr>
+            <td colspan="2">Թույլատրելի առավելագույն արագությունը</td>
+            <td>60կմ/ժ</td>
+          </tr>
+          <tr>
+            <td rowspan="2">Խախտման</td>
+            <td>օրը, ամիսը, տարին, ժամը, րոպեն</td>
+            <td>30 հլս. 2021թ. Ժամը` 10:43</td>
+          </tr>
+          <tr>
+            <td>վայրը</td>
+            <td>ՀՀ, Մ-3 86 կմ, գ. Ալագյազ</td>
+          </tr>
+          <tr>
+            <td>Խախտված իրավանորմը</td>
+            <td colspan="2">ՀՀ կառավարության 2007 թվականի հունիսի 28-ի №955-Ն որոշման Հավելված №1-ի 68-րդ կետ</td>
+          </tr>
+          <tr>
+            <td>Հաստատված հանգամանքները</td>
+            <td colspan="2">Հանելով արագաչափ սարքի հնարավոր սխալանքի 10կմ/ժ չափը՝ բնակավայրում գերազանցել է երթևեկության սահմանված արագությունը 2կմ/ժ-ով</td>
+          </tr>
+          <tr>
+            <td>Վարչական պատասխանատվություն նախատեսող նորմատիվ ակտը</td>
+            <td colspan="2">Վարչական իրավախախտումների վերաբերյալ ՀՀ օրենսգրքի 124.4-րդ հոդվածի 1-ին մաս</td>
+          </tr>
         </table>
-        <p style="text-align: justify">
+        <p class="basisForImposingFines">
           Ելնելով վերոգրյալից և ղեկավարվելով Վարչական իրավախախտումների
           վերաբերյալ ՀՀ օրենսգրքի 32-րդ հոդվածի 3-րդ մասով, 224-րդ հոդվածի 2-րդ
           մասով`
         </p>
-        <p style="text-align: center"><b>ՈՐՈՇԵՑԻ</b></p>
-        <ol>
-          <li style="text-align: justify">
+        <p class="iDecided">
+          <strong>ՈՐՈՇԵՑԻ</strong>
+        </p>
+        <ol class="conclusionContainer">
+          <li class="conclusion">
             Վարչական իրավախախտումների վերաբերյալ ՀՀ օրենսգրքի 124.4-րդ հոդվածի
             1-ին մասի համաձայն, ԱՇՈՏ ՄՈՒՇԵՂԻ ՄԽԻԹԱՐՅԱՆ-ին տուգանել
-            <b>2000 (երկու հազար) դրամ:</b>
+            <strong class="fontArianAMUBold">2000 (երկու հազար) դրամ:</strong>
           </li>
-          (<a
-            href="https://www.e-payments.am/hy/fines/step3/service=1111/?police_pin=21BQ7ANRDED6&amp;police_decree=13230545"
-            target="_blank"
-            >Վճարել առցանց</a
-          >)
-          <li style="text-align: justify">
+          (<a href="https://www.e-payments.am/hy/fines/step3/service=1111/?police_pin=21BQ7ANRDED6&amp;police_decree=13230545" target="_blank">Վճարել առցանց</a>)
+          <li class="conclusion">
             Սույն որոշումն ուժի մեջ է մտնում հանձնելու (հանձնված համարվելու)
             օրվան հաջորդող օրը:
           </li>
-          <li style="text-align: justify">
+          <li class="conclusion">
             Սույն որոշմամբ նշանակված տուգանքի վճարման հաշվեհամարն է`
             900013150058:
           </li>
-          <li style="text-align: justify">
+          <li class="conclusion">
             Սույն որոշումը կարող է բողոքարկվել Ճանապարհային ոստիկանության պետին`
             Վարչական իրավախախտումների վերաբերյալ ՀՀ օրենսգրքի 283-րդ հոդվածով
             սահմանված կարգով հանձնելու (հանձնված համարվելու) օրվանից հետո՝
@@ -142,46 +125,30 @@
             կարգով և ժամկետներում:
           </li>
         </ol>
-
-        <hr />
-        <p></p>
-        <div class="pics">
-          <img
-            src="/api/pic.php?hash=6fcbdf21bd76b0b4a615d338af332cd32f9c20a6&amp;pin=21BQ7ANRDED6&amp;id=24551740&amp;pic=2"
-          />
-          <br /><br />
-          <img
-            src="/api/pic.php?hash=6fcbdf21bd76b0b4a615d338af332cd32f9c20a6&amp;pin=21BQ7ANRDED6&amp;id=24551740&amp;pic=1"
-          />
-          <div style="padding: 20px 0">
-            <hr />
-            <p style="text-align: left">
-              <strong
-                >«Տեսանկարահանող կամ լուսանկարահանող սարքերով հայտնաբերված
-                ճանապարհային երթևեկության կանոնների խախտումների վերաբերյալ
-                գործերով իրականացվող վարչական վարույթի առանձնահատկությունների
-                մասին» օրենքի 7․6-րդ հոդվածով նախատեսված դեպքերում և կարգով
-                վարչական մարմինն ունի տրանսպորտային միջոցը հետախուզելու
-                լիազորություն։</strong
-              >
-            </p>
-
-            <hr />
-            <p>
-              Որոշման կատարման կարգի և Ձեր իրավունքների ու պարտականությունների
-              վերաբերյալ պարզաբանումները՝
-              <a target="_blank" href="https://roadpolice.am/aktikatarum1"
-                >https://roadpolice.am/aktikatarum1</a
-              >
-              հղումով
-            </p>
-            <hr />
-            <div></div>
-            <p style="text-align: center">
-              Արագաչափի համապատասխանության վկայագիր` No 1200 (Գ/Հ` 71506),
-              Տեղակայման վայրը` ՀՀ, Մ-3 86 կմ, գ. Ալագյազ
-            </p>
-          </div>
+        <div class="lastThreeParagraphs">
+          <hr />
+          <p>
+            <strong>
+              «Տեսանկարահանող կամ լուսանկարահանող սարքերով հայտնաբերված
+              ճանապարհային երթևեկության կանոնների խախտումների վերաբերյալ
+              գործերով իրականացվող վարչական վարույթի առանձնահատկությունների
+              մասին» օրենքի 7․6-րդ հոդվածով նախատեսված դեպքերում և կարգով
+              վարչական մարմինն ունի տրանսպորտային միջոցը հետախուզելու
+              լիազորություն։</strong
+            >
+          </p>
+          <hr />
+          <p>
+            Որոշման կատարման կարգի և Ձեր իրավունքների ու պարտականությունների
+            վերաբերյալ պարզաբանումները՝
+            <a target="_blank" href="https://roadpolice.am/aktikatarum1">https://roadpolice.am/aktikatarum1</a>
+            հղումով
+          </p>
+          <hr />
+          <p>
+            Արագաչափի համապատասխանության վկայագիր` No 1200 (Գ/Հ` 71506),
+            Տեղակայման վայրը` ՀՀ, Մ-3 86 կմ, գ. Ալագյազ
+          </p>
         </div>
       </div>
     </div>
