--- a/index.html
+++ b/index.html
@@ -4,38 +4,91 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="index.css" />
+    <title>Check</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./fonts.css" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root">
-      <div class="wrapper">
-        <div class="logoAndDescriptionContainer">
-          <div class="logo">
-            <img src="./img/logo.png" alt="Police logo" />
-          </div>
-          <div class="description">
-            Ճանապարհային ոստիկանության տեսանկարահանող և լուսանկարահանող սարքերով հայտնաբերված իրավախախտումների համակարգ
-          </div>
+      <div class="flexTable">
+        <div class="flexTr bold paddingBottom">
+          <div>Խոհանոց</div>
+          <div></div>
         </div>
-        <div class="containerpPersonalCode">
-          <div class="descriptionOfAction">
-            Մուտքագրեք վարչական տույժ նշանակելու մասին որոշման անհատական ծածկագիրը (PIN#)
-          </div>
-          <input class="enterPersonalCode" type="text" maxlength="12" value="21BQ7ANRDED6" />
-          <div class="sendContainer">
-            <a class="send" href="./violation.html">Տեսնել</a>
-          </div>
-          <!-- <div class="sendContainer">
-            <button class="send">Տեսնել</button>
-          </div> -->
+        <div class="flexTr bold paddingBottom">
+          <div>Սեղան</div>
+          <div>3/Առաքում № 04920</div>
         </div>
-        <div class="horizontalLine"></div>
+        <div class="flexTr paddingBottom">
+          <div>Ամսաթիվ</div>
+          <div>17։08։21 14։ 27։21</div>
+        </div>
+        <div class="flexTr border borderWidth">
+          <div class="halfflexTd">1 կգ տավարի կոտլետ, 1կգ հավի ձողիկ, 1կգ տավարի կոլոլակ, 1կգ աղացած միս</div>
+          <div class="flexTd">1</div>
+        </div>
       </div>
-      <div id="result">
+      <div class="flexTable">
+        <div class="flexTr paddingBottom">
+          <div>17.08</div>
+          <div>14:28</div>
+        </div>
+        <div class="flexTr paddingBottom">
+          <div>bayazet</div>
+          <div></div>
+        </div>
+        <div class="flexTr paddingBottom">
+          <div>3/Առաքում</div>
+          <div>#0492</div>
+        </div>
+        <div class="flexTr bold border">
+          <div class="aHalf">Անվանում</div>
+          <div class="flexTd">Հատ</div>
+          <div class="flexTd">Գին</div>
+          <div class="flexTd">Ընդհ</div>
+        </div>
+        <div class="flexTr bold border">
+          <div class="aHalf">1 կգ տավարի կոտլետ, 1կգ հավի ձողիկ, 1կգ տավարի կոլոլակ, 1կգ աղացած միս</div>
+          <div class="flexTd">1</div>
+          <div class="flexTd">5500</div>
+          <div class="flexTd">5500</div>
+        </div>
+        <div class="flexTr bold border">
+          <div>առաքում</div>
+          <div>500դր</div>
+        </div>
+        <div class="flexTr bold border">
+          <div>Ընդհ․</div>
+          <div>6000դր</div>
+        </div>
+        <div class="flexTr bold border borderWidth">
+          <div>3/Առաքում</div>
+          <div>#0492</div>
+        </div>
+      <!-- </div>
+      <div class="flexTable"> -->
+        <div class="flexTr bold paddingBottom">
+          <div>հաճախորդ</div>
+          <div>Նշված չէ</div>
+        </div>
+        <div class="flexTr bold paddingBottom">
+          <div>հեռախոսահամար</div>
+          <div></div>
+        </div>
+        <div class="flexTr bold paddingBottom">
+          <div>հասցե</div>
+          <div>Սեբաստիան 25, բն 5</div>
+        </div>
+        <div class="flexTr bold paddingBottom">
+          <div>նկարագրություն</div>
+          <div></div>
+        </div>
+        <div class="flexTr bold paddingBottom">
+          <div>Շնորհակալություն</div>
+          <div></div>
+        </div>
       </div>
     </div>
-    <script src="./index.js"></script>
   </body>
 </html>
